# panel-at-scale-code

./: .gitignore  LICENSE  README.md  event_study_anscombe.ipynb  pyproject.toml  rmse_computation.ipynb  timining_benchmarks.ipynb
data/: benchmark100000_14_7.csv  benchmark100000_28_7.csv  benchmark100000_42_7.csv  benchmark10000_14_7.csv  benchmark1000_14_7.csv  benchmark1000_28_7.csv  benchmark1000_42_7.csv  benchmark_twfe_fixest_1000000_14_7.csv  benchmark_twfe_fixest_100000_14_7.csv  benchmark_twfe_fixest_100000_28_7.csv  benchmark_twfe_fixest_100000_42_7.csv  benchmark_twfe_fixest_10000_14_7.csv  benchmark_twfe_fixest_10000_28_7.csv  benchmark_twfe_fixest_10000_42_7.csv
utils/: benchmark.py  db.py  dgps.py  estimators.py
