[project]
authors = [{name = "Alexander Fischer", email = "alexander-fischer1801@t-online.de"}]
dependencies = [ "duckreg", "statsmodels", "ipykernel", "duckdb", "pyfixest>=0.25.2", "pyarrow>=17.0.0,<18", "ipywidgets>=8.1.5,<9", "watermark>=2.5.0,<3"]
description = "Add a short description here"
name = "panel-scale-code"
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]
default = ["statsmodels", "duckdb"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
panel-scale-code = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.hatch.build.targets.wheel]
packages = ["panel_scale_code"]
